--- a/languages/vi.lang
+++ b/languages/vi.lang
@@ -1,103 +1,100 @@
-# If you want to move down the line, please use \n. e.g: Priyanshu\nPriyansh.
-# After changed, you have to restart the bot to use.
-# Put the # character at the beginning of each sentence if you don't want the code to run those lines. 
-# Thanks to https://www.facebook.com/duong.than.net for translate to English!
+# SaKib Style Language File 🖤
 
-# Priyansh.js 
+# Priyansh.js
 
-priyansh.errorFormat=Malformed module!
-priyansh.nameExist=Module's name is similar to another module!
-priyansh.notFoundLanguage=Module %1 don't support your language
-priyansh.notFoundPackage=Can't find package %1 support for module %2, installing...
-priyansh.cantInstallPackage=Can't install package %1 for module %2, error: %3
-priyansh.loadedPackage=Installed whole package successfully for module %1
-priyansh.loadedConfig=Installed config successfully for module %1
-priyansh.cantLoadConfig=Can't install config of module %1, error: %2
-priyansh.cantOnload=Can't launch setup of module %1, error: %1
-priyansh.successLoadModule=Successfully installed module %1
-priyansh.failLoadModule=Can't install module %1, error: %2
-priyansh.finishLoadModule=Installed %1 module commands and %2 module events successfully 
-priyansh.foundPathAppstate=Found file appstate
-priyansh.notFoundPathAppstate=Can't find file appstate
-priyansh.checkListGban=Cheking global ban list...
-priyansh.banDevice=Your device have been banned from miraiproject, please contact to facebook https://fb.me/catalizcs to know more information or asking for unban key, if you already have unban key, please fill it below.
-priyansh.keyNotSameFormat=Wrong format, code must contain 6 number.
-priyansh.codeInputExpired=Your code is wrong or out of date.
-priyansh.unbanDeviceSuccess=Your device are unban now, please restart to use.
-priyansh.userBanned=You had been banned from miraiproject when %1 with reason: %2. Please contact to facebook https://fb.me/catalizCS to have more information!
-priyansh.finishCheckListGban=Checked global ban list
-priyansh.handleListenError=handleListene has occurred some unexpected errorr, error : %1
-priyansh.warningSourceCode=DETECTED THAT SOURCE CODE'S STRUCTURE HAD BEEN CHANGED , STOP NOW!
-priyansh.refreshListen=Refreshed handleListener...
-priyansh.successConnectDatabase=Connected to database successfully!
-priyansh.failConnectDatabase=Failed to connect to database, error: %1
+priyansh.errorFormat=Oops 😵‍💫 Module format e kichu problem hoise!
+priyansh.nameExist=Same name diye onno module already ase! Naam change dao 😎
+priyansh.notFoundLanguage=Module %1 ei language support kore na 🥲
+priyansh.notFoundPackage=Package %1 paoa jaina module %2 er jonne 😶 Installing choltese...
+priyansh.cantInstallPackage=Package %1 install korte parlam na %2 er jonne 😭 Error: %3
+priyansh.loadedPackage=Module %1 er jonne sob package install hoye gese ✅
+priyansh.loadedConfig=Config install complete hoye gese module %1 er jonno 🎉
+priyansh.cantLoadConfig=Config install fail hoise module %1 er, error: %2 🛑
+priyansh.cantOnload=Module %1 er setup chalu korte pari nai 😔 Error: %1
+priyansh.successLoadModule=Module %1 successfully install hoye gese 🚀
+priyansh.failLoadModule=Module %1 install fail hoise, error: %2 😵‍💫
+priyansh.finishLoadModule=Ready! %1 ta command and %2 ta event fully loaded 🥳
+priyansh.foundPathAppstate=Appstate file khuje peye gechi 🔑
+priyansh.notFoundPathAppstate=Appstate file pawa jaina 😔
+priyansh.checkListGban=Checking Global Ban list... 😈
+priyansh.banDevice=Apnar device ban kora ase ❌ Unban pete fb contact korun: https://fb.me/catalizcs
+priyansh.keyNotSameFormat=Key vul format e diyecho! 🧨 6 digit er key lagbe!
+priyansh.codeInputExpired=Code vul ba expired hoye gese 😕 abar try korun!
+priyansh.unbanDeviceSuccess=Congrats 🎉 Device unban hoye gese. Restart korun!
+priyansh.userBanned=%1 tarikh e apni ban khaisen 🥹 Reason: %2. Details: https://fb.me/catalizcs
+priyansh.finishCheckListGban=Global Ban list check complete ✅
+priyansh.handleListenError=Listening time e error hoise 🧨 Error: %1
+priyansh.warningSourceCode=Source code e kisu change detect hoise! Stop korlam 🛑
+priyansh.refreshListen=Listener refresh complete 🔄
+priyansh.successConnectDatabase=Database connect successfull 🟢
+priyansh.failConnectDatabase=Database connect fail hoise ❌ Error: %1
 
 # includes/listen.js
 
-listen.startLoadEnvironment=Proceed to load the environment variable ...
-listen.loadedEnvironmentThread=Loaded thread environment variable successfully 
-listen.loadedEnvironmentUser=Loaded user environment variable successfully 
-listen.successLoadEnvironment=Loaded environment variable successfully 
-listen.failLoadEnvironment=Can't load environment variable, error: %1
+listen.startLoadEnvironment=Environment variable load kora hocche 🛠️
+listen.loadedEnvironmentThread=Thread environment load complete ✅
+listen.loadedEnvironmentUser=User environment load complete ✅
+listen.successLoadEnvironment=Sob environment ready! 😎
+listen.failLoadEnvironment=Environment load e problem 🛑 Error: %1
 
 # includes/controller/currencies.js
 
-currencies.needObjectOrArray=Have to be an Array or an Object or maybe both
-currencies.needObject=Have to be an Object
-currencies.needNumber= Have to be an number
+currencies.needObjectOrArray=Eta Array/ Object dewa lagbe boss 😐
+currencies.needObject=Only Object e kaj korbe 📦
+currencies.needNumber=Valid number lagbe ekta 🤓
 
 # includes/controller/threads.js
 
-threads.needObjectOrArray=Have to be an Array or an Object or maybe both
-threads.needObject=Have to be an Object 
+threads.needObjectOrArray=Array/ Object chara thread kaaj korbe na 😏
+threads.needObject=Pure Object lagbe ekhane 📜
 
 # includes/controller/users.js
 
-users.needObjectOrArray=Have to be an Array or an Object or maybe both
-users.needObject=Have to be an Object
+users.needObjectOrArray=Array or Object lage users er kaaj e 🤖
+users.needObject=Sirf Object allow kora ase 😌
 
 # includes/handle/handleCommand.js
 
-handleCommand.userBanned=You are unable to use bot!\n%1\n%2
-handleCommand.threadBanned=Your thread are unable to use bot!\n%1\n%2
-handleCommand.commandNotExist=Mujhe Ye Command Nahi Mili Dusri Try Karlo ☣️🥀
-handleCommand.commandThreadBanned=Your thread is unable to use command "%1"
-handleCommand.commandUserBanned=You are unable to use command "%1"
-handleCommand.threadNotAllowNSFW=Your thread is not allowed to use NSFW commands
-handleCommand.cantGetInfoThread=Can't get your thread's info, error: %1
-handleCommand.permssionNotEnough=You have no permission to use command "%1"
-handleCommand.cantSetMessageReaction=Having some unexpected error at setMessageReaction, error: %1
-handleCommand.executeCommand=[ %1 ] Command used: %2 by user: %3 at thread: %4 | Args included: %5 | Processing time: %6ms
-handleCommand.commandError=Having some unexpected error when using command %1, error: %2
+handleCommand.userBanned=Apni bot use korte parben na 🚫\n%1\nReason: %2
+handleCommand.threadBanned=E group er bot off kore dewa hoise 😶\n%1\nReason: %2
+handleCommand.commandNotExist=Ai command koi pailam na bro 🤔 Onno kichu try korun ☣️🥀
+handleCommand.commandThreadBanned=Thread banned e command %1 use kora jaina ❌
+handleCommand.commandUserBanned=Command %1 apnar jonno off 🛑
+handleCommand.threadNotAllowNSFW=Ei group e NSFW off ache 🙅‍♂️
+handleCommand.cantGetInfoThread=Thread info anar somoy problem 😥 Error: %1
+handleCommand.permssionNotEnough=Permission nai bhai 😬 Command: %1
+handleCommand.cantSetMessageReaction=Reaction dite gele error paisi 🧨 Error: %1
+handleCommand.executeCommand=[ %1 ] Command chalailen: %2\nBy: %3\nThread: %4\nArgs: %5\nTime: %6ms
+handleCommand.commandError=Command %1 cholte gele error paisi 😵‍💫 Error: %2
 
 # includes/handle/handleCommandEvent.js
 
-handleCommandEvent.moduleError=Having some unexpected error when using command %1, error: %2
+handleCommandEvent.moduleError=Event %1 cholte problem 😖 Error: %2
 
 # includes/handle/handleCreateDatabase.js
 
-handleCreateDatabase.newThread=new thread: %1
-handleCreateDatabase.newUser=new user %1
+handleCreateDatabase.newThread=New thread detected: %1
+handleCreateDatabase.newUser=New user detected: %1
 
 # includes/handle/handleEvent.js
 
-handleEvent.executeEvent=[ %1 ] Event was executed: %2 at thread: %3 | Processing time: %4ms
-handleEvent.eventError=Having some error when executing event %1, error: %12
+handleEvent.executeEvent=[ %1 ] Event cholse: %2\nThread: %3\nTime: %4ms
+handleEvent.eventError=Event %1 cholte problem paisi 🤯 Error: %12
 
 # includes/handle/handleReaction.js
 
-handleReaction.missingValue=Missing value to respond your problem
-handleReaction.executeError=Having some error when responding your problem, error: %1
+handleReaction.missingValue=Reply korar jonne value missing 🫤
+handleReaction.executeError=Reaction e error hoise 😵 Error: %1
 
 # includes/handle/handleReply.js
 
-handleReply.missingValue=Missing value to respond your problem
-handleReply.executeError=Having some error when responding your problem, error: %1
+handleReply.missingValue=Reply korte value nai 😵‍💫
+handleReply.executeError=Reply e error paisi 🛑 Error: %1
 
 # includes/handle/handleSchedule.js
 
-handleSchedule.exectuteError=Having some error when schedule at module %1, error: %2
+handleSchedule.exectuteError=Schedule cholte gele problem hoise module %1 e ❌ Error: %2
 
 # utils/index.js
 
-utils.throwError=[!] The command you are using is not syntax correct, please use %1help %2 for more usage details
+utils.throwError=[!] Syntax error boss 😅 Try this: %1help %2 for details 📜
